# web_mcp

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MCP_MEM0_IMPLEMENTATION_PLAN.md  Makefile  README.md  SEARCH_IMPROVEMENTS_PLAN.md  SECURITY.md  agents.md  docker-compose.yml  main.py  pyproject.toml  setup.sh  test_fetch.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
.opencode/: package-lock.json
.opencode/plans/: chart-rendering-enhancement.md  charting-tool-plan.md  tool-cleanup.md
docs/: README.md  admin-panel-plan.md  architecture.md  configuration.md  development.md  docker-hub-setup.md  docker.md  extractors.md  index.md  knowledge_gatherer_plan.md  llm-integration.md  research.md  usage.md
examples/: README.md  basic_usage.py  custom_extractor.py  docker-compose.yml
mem0_server/: Dockerfile  docker-compose.yml  requirements.txt  server.py
plans/: ask-tool-improvements.md  fetcher-improvement-plan.md  web-browsing-mcp-server.md
src/web_mcp/: __init__.py  __main__.py  api_keys.py  brave.py  cache.py  config.py  content_store.py  fetcher.py  kiwix_client.py  kiwix_processor.py  logging.py  logging_utils.py  mcp_logging.py  optimizer.py  path_routing.py  pdf_processor.py  playwright_fetcher.py  searxng.py  security.py  server.py  tls_fetcher.py
src/web_mcp/admin/: __init__.py  auth.py  router.py  schemas.py  session_auth.py  storage.py  ui.py
src/web_mcp/charts/: __init__.py  generator.py
src/web_mcp/extractors/: __init__.py  base.py  custom.py  readability.py  trafilatura.py
src/web_mcp/knowledge/: __init__.py  categories.py  cleanup.py  dedup.py  extractor.py  pipeline.py  validation.py
src/web_mcp/llm/: __init__.py  client.py  config.py  embedding_cache.py  embeddings.py
src/web_mcp/mem0/: __init__.py  tools.py
src/web_mcp/research/: __init__.py  bm25.py  chunker.py  citations.py  kiwix_pipeline.py  pipeline.py  query_rewriting.py  reranking.py
src/web_mcp/tools/: __init__.py  _core.py  advanced.py  fetching.py  search.py  utils.py
src/web_mcp/utils/: retry.py
tests/: __init__.py  conftest.py  test_bm25.py  test_bm25_freshness.py  test_brave.py  test_cache.py  test_charts_generator.py  test_chunker.py  test_citations.py  test_content_store.py  test_embedding_cache.py  test_extractors.py  test_fetcher.py  test_fetching.py  test_instance_selection.py  test_javascript_security.py  test_kiwix_client.py  test_kiwix_processor.py  test_knowledge.py  test_llm_client.py  test_main.py  test_mcp_logging.py  test_mem0.py  test_mem0_tools.py  test_optimizer.py  test_pdf_processor.py  test_performance.py  test_playwright_fetcher.py  test_query_rewriting.py  test_reranking.py  test_research_concurrency.py  test_research_multi_query.py  test_retry.py  test_search.py  test_search_analytics.py  test_search_provider.py  test_searxng.py  test_searxng_dedup.py  test_searxng_time_range.py  test_security.py  (+2 more)
tests/test_admin/: test_auth.py  test_path_routing.py  test_router.py  test_session_auth.py  test_storage.py  test_tool_registration.py
