[project]
name = "web-mcp"
version = "1.0.0"
description = "A web browsing MCP server with content extraction and context optimization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "kaleido>=0.2.0",
    "mcp>=1.26.0",
    "playwright>=1.40.0",
    "plotly>=5.18.0",
    "readability>=0.3.2",
    "trafilatura>=2.0.0",
    "uvicorn>=0.34.0",
    "numpy>=1.26.0",
]

[project.scripts]
web-mcp = "web_mcp.server:main"
web-mcp-install = "web_mcp.playwright_fetcher:install_browsers"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
package-dir = {"" = "src"}
