[project]
name = "web-mcp"
version = "1.0.0"
description = "A web browsing MCP server with content extraction and context optimization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "kaleido>=0.2.0",
    "mcp>=1.26.0",
    "mini-racer>=0.14.0",
    "playwright>=1.40.0",
    "plotly>=5.18.0",
    "readability>=0.3.2",
    "trafilatura>=2.0.0",
    "uvicorn>=0.34.0",
    "numpy>=1.26.0",
    "pypdf>=4.0.0",
]

[project.scripts]
web-mcp = "web_mcp.server:main"
web-mcp-install = "web_mcp.playwright_fetcher:install_browsers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "types-beautifulsoup4>=4.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B017"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
ignore_missing_imports = true
no_strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "web_mcp.server",
    "web_mcp.playwright_fetcher",
    "web_mcp.utils.retry",
    "web_mcp.extractors.readability",
    "web_mcp.charts.generator",
    "web_mcp.llm.embedding_cache",
    "web_mcp.llm.client",
    "web_mcp.fetcher",
    "web_mcp.security",
    "web_mcp.research.*",
    "web_mcp.searxng",
]
ignore_errors = true

[tool.coverage.run]
source = ["src/web_mcp"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 45

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
